--- a/index.html
+++ b/index.html
@@ -55,18 +55,17 @@
   <p>Palette generator with harmony logic and color copying features.</p>
   <a href="https://amin-karzazi.github.io/pgak/" target="_blank" class="btn">View Demo</a>
 </div>
- <div class="project-card">
+ 
+    <div class="project-card">
+  <h3>Quiz application</h3>
+  <p>test this quiz application  </p>
+  <a href="https://amin-karzazimalki.github.io/Quiz/" target="_blank" class="btn">View Demo</a>
+</div>
+<div class="project-card">
   <h3>An advanced color palette generator</h3>
   <p>An advanced color palette generator with harmony logic and color copying features.</p>
   <a href="https://amin-karzazi.github.io/pgaak/" target="_blank" class="btn">View Demo</a>
 </div>
-
-    <div class="project-card">
-  <h3>Quiz application</h3>
-  <p>test this quiz application  </p>
-  <a href="https://amin-karzazi.github.io/quiz-app/" target="_blank" class="btn">View Demo</a>
-</div>
-
     <div class="project-card">
   <h3>Quiz application2</h3>
   <p>test this quiz application with react  </p>
@@ -112,6 +111,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
