--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="project-card">
   <h3>Palette generator</h3>
   <p>Palette generator with harmony logic and color copying features.</p>
-  <a href="https://amin-karzazi.github.io/pgak/" target="_blank" class="btn">View Demo</a>
+  <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank" class="btn">View Demo</a>
 </div>
  
     <div class="project-card">
@@ -111,6 +111,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
