--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
     </section>
 
     <section id="about">
+      
       <h2>About me</h2>
+       <div class="hero-content">
       <p>🎨 I’m a mathematics teacher and passionate web developer,<br /> blending mathematical precision with creative code.</p>
       <p>✨ I’m carving a new path at the intersection of <br />digital art and artificial intelligence.</p>
       <p>🚀 Currently studying AI engineering to build <br />solutions that are useful, beautiful, and smart.</p>
+          </div>
     </section>
 
      <section id="projects">
@@ -111,6 +114,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
