--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
 </head>
 <body>
+  <div id="custom-cursor"></div>
   <header>
     <div><video src="logo1.mp4" class="logo" autoplay muted loop>
       <img src="logo.png" alt="Logo AMIN KARZAZI"class="logo"></video>
@@ -28,6 +29,7 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
+  
   <main>
     <section id="hero">
       <img src="profil.jpg" alt="Photo de profil de AMIN KARZAZI" class="profil-img" />
@@ -114,6 +116,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
