--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
   <h2></h2>
   <div class="projects-grid">
 
-    <!-- Générateur de palette -->
+     Générateur de palette
+    <div id="wb_Image1" style="position:absolute;left:182px;top:115px;width:366px;height:338px;z-index:0;padding:0;">
+<a href="http://www.yourwebsite.com/" target="_blank"><img src="projet.png" id="Image1" alt="" border="0" title="ici le nom du site" style="width:366px;height:338px;"></a> 
+
     <div class="project-card">
   <h3>Palette generator</h3>
-  <p>Palette generator with harmony logic and color copying features.</p>
-  <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank" class="btn">View Demo</a>
+  <p>Palette generator with harmony logic and color copying features.</p></div>
+<!--  <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank" class="btn">View Demo</a> -->
 </div>
  
     <div class="project-card">
@@ -116,6 +119,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
