--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   
     <div>
-<a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank"><img src="projet.png" id="Image1" alt="" border="0" title="ici le nom du site" style="width:366px;height:338px;"></a> 
+<a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank"><img src="projet.png" id="Image1" alt="" border="0" title="https://amin-karzazimalki.github.io/Palette-generator/" style="width:266px;height:238px;"></a> 
 
     <div class="project-card">
   <h3>Palette generator</h3>
@@ -119,6 +119,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
