--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
   
     <div>
 <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank"><img src="projet.png" id="Image1" alt="" border="0" title="https://amin-karzazimalki.github.io/Palette-generator/" style="width:266px;height:238px;"></a> 
-
+</div>
     <div class="project-card">
   <h3>Palette generator</h3>
-  <p>Palette generator with harmony logic and color copying features.</p></div>
+  <p>Palette generator with harmony logic and color copying features.</p> 
 <!--  <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank" class="btn">View Demo</a> -->
 </div>
  
@@ -119,6 +119,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
