--- a/index.html
+++ b/index.html
@@ -51,35 +51,48 @@
     </section>
 
      <section id="projects">
-  <h2></h2>
+  <h2>Mes Projets</h2>   <!-- ← ajoute un titre visible, sinon la section paraît vide -->
+
   <div class="projects-grid">
 
-  
-    <div>
-<a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank"><img src="projet.png" id="Image1" alt="" border="0" title="https://amin-karzazimalki.github.io/Palette-generator/" style="width:266px;height:238px;"></a> 
+    <!-- Projet 1 -->
+    <div class="project-item">
+      <a href="https://amin-karzazimalki.github.io/Palette-generator/" 
+         target="_blank" 
+         class="project-image-link">
+        <img src="projet.png" 
+             alt="Palette Generator - Aperçu" 
+             class="project-img">
+      </a>
 
-    <div class="project-card">
-  <h3>Palette generator</h3>
-  <p>Palette generator with harmony logic and color copying features.</p> </div>
-<!--  <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank" class="btn">View Demo</a> -->
-</div>
- 
-    <div class="project-card">
-  <h3>Quiz application</h3>
-  <p>test this quiz application  </p>
-  <a href="https://amin-karzazimalki.github.io/Quiz/" target="_blank" class="btn">View Demo</a>
-</div>
-<div class="project-card">
-  <h3>An advanced color palette generator</h3>
-  <p>An advanced color palette generator with harmony logic and color copying features.</p>
-  <a href="https://amin-karzazi.github.io/pgaak/" target="_blank" class="btn">View Demo</a>
-</div>
-    <div class="project-card">
-  <h3>Quiz application2</h3>
-  <p>test this quiz application with react  </p>
-  <a href="https://amin-karzazi.github.io/quiz-appG/" target="_blank" class="btn">View Demo</a>
-</div>
+      <div class="project-card">
+        <h3>Palette generator</h3>
+        <p>Palette generator with harmony logic and color copying features.</p>
+      </div>
 
+      <!-- Optionnel : bouton visible (décommente si tu veux) -->
+      <!-- <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank" class="btn">Voir la démo</a> -->
+    </div>
+
+    <!-- Projet 2 -->
+    <div class="project-item">
+      <a href="https://amin-karzazimalki.github.io/Quiz/" 
+         target="_blank" 
+         class="project-image-link">
+        <img src="projet.png" 
+             alt="Quiz Application - Aperçu" 
+             class="project-img">
+      </a>
+
+      <div class="project-card">
+        <h3>Quiz application</h3>
+        <p>Test this quiz application – multiple questions, timer & score tracking.</p>
+      </div>
+
+      <!-- <a href="https://amin-karzazimalki.github.io/Quiz/" target="_blank" class="btn">Voir la démo</a> -->
+    </div>
+
+    <!-- Ajoute d'autres projets ici de la même façon -->
 
   </div>
 </section>
@@ -119,6 +132,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
