--- a/index.html
+++ b/index.html
@@ -51,50 +51,25 @@
     </section>
 
      <section id="projects">
-  <h2>Mes Projets</h2>   <!-- ← ajoute un titre visible, sinon la section paraît vide -->
-
-  <div class="projects-grid">
-
-    <!-- Projet 1 -->
-    <div class="project-item">
-      <a href="https://amin-karzazimalki.github.io/Palette-generator/" 
-         target="_blank" 
-         class="project-image-link">
-        <img src="projet.png" 
-             alt="Palette Generator - Aperçu" 
-             class="project-img">
-      </a>
-
-      <div class="project-card">
-        <h3>Palette generator</h3>
-        <p>Palette generator with harmony logic and color copying features.</p>
-      </div>
-
-      <!-- Optionnel : bouton visible (décommente si tu veux) -->
-      <!-- <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank" class="btn">Voir la démo</a> -->
-    </div>
-
-    <!-- Projet 2 -->
-    <div class="project-item">
-      <a href="https://amin-karzazimalki.github.io/Quiz/" 
-         target="_blank" 
-         class="project-image-link">
-        <img src="projet.png" 
-             alt="Quiz Application - Aperçu" 
-             class="project-img">
-      </a>
-
-      <div class="project-card">
-        <h3>Quiz application</h3>
-        <p>Test this quiz application – multiple questions, timer & score tracking.</p>
-      </div>
-
-      <!-- <a href="https://amin-karzazimalki.github.io/Quiz/" target="_blank" class="btn">Voir la démo</a> -->
-    </div>
-
-    <!-- Ajoute d'autres projets ici de la même façon -->
-
-  </div>
+  <h2></h2>
+      
+  <div class="projects-grid">
+   
+    <div>
+<a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank"><img src="projet.png" id="Image1" alt="" border="0" title="https://amin-karzazimalki.github.io/Palette-generator/" style="width:266px;height:238px;"></a>
+    <div class="project-card">
+  <h3>Palette generator</h3>
+  <p>Palette generator with harmony logic and color copying features.</p> </div>
+<!-- <a href="https://amin-karzazimalki.github.io/Palette-generator/" target="_blank" class="btn">View Demo</a> -->
+</div>
+&nbsp;&nbsp;&nbsp;
+&nbsp;<div>
+<a href="https://amin-karzazimalki.github.io/Quiz/" target="_blank"><img src="projet.png" id="Image1" alt="" border="0" title="https://amin-karzazimalki.github.io/Palette-generator/" style="width:266px;height:238px;"></a>
+&nbsp;&nbsp;&nbsp;&nbsp;<div class="project-card">
+&nbsp;&nbsp;<h3>Quiz application</h3>
+&nbsp;&nbsp;<p>test this quiz application </p></div>
+</div>
+&nbsp;&nbsp;</div>
 </section>
 
 
@@ -132,6 +107,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
